Fix: fix some layout bug

--- a/src/pages/resource/components/ResourceCard.module.scss
+++ b/src/pages/resource/components/ResourceCard.module.scss
@@ -1,3 +1,7 @@
-.accordioncontent {
+.acccontent {
     padding: 0;
+}
+
+.cardroot {
+    padding: 5px;
 }
